--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
                         <i class="fab fa-instagram"></i>
                         <i class="fab fa-twitter"></i>
                         <i class="fab fa-youtube"></i>
+                        <i class="fab fa-whatsapp"</i>
                     </div>
                 </div>
             </div>
